--- a/public/index.html
+++ b/public/index.html
@@ -1186,11 +1186,11 @@
             return;
         }
 
-        const target = document.querySelector('main');
+        const target = document.querySelector('main.mx-auto');
         console.log("타겟 찾음:", target);
 
         if (!target) {
-            alert("main 요소를 찾을 수 없습니다!");
+            alert("대시보드 영역(main.mx-auto)을 찾을 수 없습니다!");
             return;
         }
 
