--- a/public/index.html
+++ b/public/index.html
@@ -1239,7 +1239,7 @@
     <script>
         // Supabase configuration - Hardcoded for local development
         const SB_URL = 'https://bksuhgixknsqzzxahuni.supabase.co'; 
-        const SB_KEY = 'sb_publishable_K47Ui76Xyb5hqjAOqJsbYg_u0ZFJTdf';
+        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJrc3VoZ2l4a25zcXp6eGFodW5pIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAxOTUzNDMsImV4cCI6MjA4NTc3MTM0M30.bivQXNhnNoeWPToLmCmi_Ik74S2_NJg_PuVZe68Vtas';
         
         let supabaseClient;
         try {
