feat: add multi-language support for all sections in My Account modal

--- a/public/header.html
+++ b/public/header.html
@@ -65,11 +65,11 @@
                     <span class="material-symbols-outlined text-sm">grid_view</span>
                     <span data-i18n="overview">Overview</span>
                 </button>
-                <button id="nav-settings" class="w-full text-left px-3 py-2 rounded-lg text-[#49699c] dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 text-sm font-bold flex items-center gap-2 transition-colors">
+                <button id="nav-settings" class="w-full text-left px-3 py-2 rounded-lg bg-primary text-white text-sm font-bold flex items-center gap-2">
                     <span class="material-symbols-outlined text-sm">settings</span>
                     <span data-i18n="settings">Settings</span>
                 </button>
-                <button id="nav-account" class="w-full text-left px-3 py-2 rounded-lg text-[#49699c] dark:text-slate-400 hover:bg-slate-100 dark:hover:bg-slate-800 text-sm font-bold flex items-center gap-2 transition-colors">
+                <button id="nav-account" class="w-full text-left px-3 py-2 rounded-lg bg-primary text-white text-sm font-bold flex items-center gap-2">
                     <span class="material-symbols-outlined text-sm">person</span>
                     <span data-i18n="account">Account</span>
                 </button>
@@ -109,7 +109,7 @@
                                     </button>
                                     <button id="cancel-subscription-btn" class="hidden w-fit px-6 py-2.5 bg-red-500 text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
                                         <span class="material-symbols-outlined text-sm">cancel</span>
-                                        <span>구독 취소</span>
+                                        <span data-i18n="cancel-subscription">구독 취소</span>
                                     </button>
                                 </div>
                             </div>
