--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -386,12 +386,12 @@
             if (marketStatusText && marketStatusDot && marketStatusIndicator) {
                 if (isOpen) {
                     marketStatusText.textContent = i18n.translate("market-open");
-                    marketStatusText.removeAttribute('data-i18n');
+                    marketStatusText.setAttribute('data-i18n', 'market-open');
                     marketStatusDot.className = 'h-2 w-2 rounded-full bg-emerald-500 animate-pulse';
                     marketStatusIndicator.className = 'flex items-center gap-2 rounded-full bg-emerald-100 dark:bg-emerald-900/30 px-6 py-2 text-xs font-bold text-emerald-600 dark:text-emerald-400';
                 } else {
                     marketStatusText.textContent = i18n.translate("market-closed");
-                    marketStatusText.removeAttribute('data-i18n');
+                    marketStatusText.setAttribute('data-i18n', 'market-closed');
                     marketStatusDot.className = 'h-2 w-2 rounded-full bg-red-500';
                     marketStatusIndicator.className = 'flex items-center gap-2 rounded-full bg-slate-200/60 dark:bg-slate-800/90 px-6 py-2 text-xs font-bold text-slate-400 dark:text-slate-400';
                 }
