--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,17 @@
             document.getElementById('kospi-change-rate').textContent = `${doc.kospi_change_rate > 0 ? '+' : ''}${doc.kospi_change_rate.toFixed(2)}%`;
             document.getElementById('kospi-change-point').textContent = `${doc.kospi_change_point > 0 ? '▲' : '▼'} ${Math.abs(doc.kospi_change_point).toFixed(2)}`;
             
-            const time = doc.timestamp.toDate().toLocaleTimeString('ko-KR', { hour: '2-digit', minute: '2-digit' });
+            const dateObj = doc.timestamp.toDate();
+            const currentLang = i18n.getLanguage();
+            const locale = currentLang === 'ko' ? 'ko-KR' : 'en-US';
+            const time = dateObj.toLocaleString(locale, { 
+                year: 'numeric', 
+                month: '2-digit', 
+                day: '2-digit', 
+                hour: '2-digit', 
+                minute: '2-digit', 
+                hour12: true 
+            }) + ' ' + i18n.translate("time-suffix");
             document.getElementById('last-updated-time').innerHTML = `<span data-i18n="last-updated">${i18n.translate("last-updated")}</span>: ${time}`;
             document.getElementById('kospi-last-updated').textContent = time;
 
