feat: add disclaimer to footers and refine AI advisor prompt

--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,7 @@
 </div>
 
 <footer class="mt-16 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
+<p class="text-[11px] leading-relaxed text-[#49699c] dark:text-slate-500 mb-6 max-w-4xl" data-i18n="disclaimer-desc">본 정보는 참고용이며 투자 권유를 목적으로 하지 않습니다. AI 분석의 특성상 실시간 데이터 반영이 지연되거나 기술적 오류가 발생할 수 있으므로, 제공되는 수치의 정확성을 보장하지 않습니다. 실제 시장 지표와 다를 수 있으니 유의하시기 바랍니다.</p>
 <div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
 <p class="text-sm font-medium dark:text-white" data-i18n="footer-desc-korea">Data provided by KRX and KOFIA.</p>
 <div class="flex flex-wrap gap-4">
