--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -413,6 +413,9 @@
             const container = document.getElementById('fred-indicators-container');
             const sp500Value = document.getElementById('market-index-value');
             const sp500Date = document.getElementById('market-index-date');
+            const statusEl = document.getElementById('status');
+
+            console.log("Firestore에서 'us_index' 데이터를 불러오는 중...");
 
             try {
                 // Get the most recent document from us_index collection
@@ -420,13 +423,14 @@
                 
                 if (!querySnapshot.empty) {
                     const data = querySnapshot.docs[0].data();
+                    console.log("성공적으로 데이터를 가져왔습니다:", data);
                     
                     // 1. Update Gauge (CNN F&G)
                     if (data.fng_value !== undefined) {
                         updateGauge(data.fng_value);
                     } else {
-                        console.warn("fng_value missing in Firestore data");
-                        document.getElementById('status').textContent = "DATA ERROR";
+                        console.warn("데이터에 fng_value가 없습니다.");
+                        if (statusEl) statusEl.textContent = i18n.translate("loading");
                     }
 
                     // 2. Update Last Updated Time
@@ -481,12 +485,12 @@
                         });
                     }
                 } else {
-                    console.log("No data found in 'us_index' collection.");
-                    if (document.getElementById('status')) document.getElementById('status').textContent = "NO DATA";
+                    console.warn("'us_index' 컬렉션이 비어있습니다.");
+                    if (statusEl) statusEl.textContent = i18n.translate("loading");
                 }
             } catch (error) {
-                console.error("Error fetching US index from Firestore:", error);
-                if (document.getElementById('status')) document.getElementById('status').textContent = "ERROR";
+                console.error("Firestore 호출 중 에러 발생:", error);
+                if (statusEl) statusEl.textContent = i18n.translate("loading");
             }
         }
 
