--- a/public/index.html
+++ b/public/index.html
@@ -415,11 +415,14 @@
                 document.getElementById('advisor-advice-display').innerHTML = html;
                 ['gemini', 'gpt', 'grok'].forEach(a => {
                     const btn = document.getElementById(`advisor-${a}`);
-                    btn.className = (a === id) ? "rounded-md bg-primary/10 px-3 py-1 text-xs font-bold text-primary" : "rounded-md px-3 py-1 text-xs font-bold text-[#49699c] hover:bg-slate-100 dark:hover:bg-slate-800";
+                    if (btn) {
+                        btn.className = (a === id) ? "rounded-md bg-primary/10 px-3 py-1 text-xs font-bold text-primary" : "rounded-md px-3 py-1 text-xs font-bold text-[#49699c] hover:bg-slate-100 dark:hover:bg-slate-800";
+                    }
                 });
             });
         };
-        ['gemini', 'gpt', 'grok'].forEach(id => document.getElementById(`advisor-${id}`)?.addEventListener('click', () => updateAdvisor(id)));
+        // Gemini 버튼만 활성화
+        document.getElementById('advisor-gemini')?.addEventListener('click', () => updateAdvisor('gemini'));
         updateAdvisor('gemini');
 
         window.addEventListener('languageChanged', () => {
